Added glm and rapidjson submodules.

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,9 @@
 	path = external/glfw
 	url = https://github.com/glfw/glfw.git
 	branch = 3.3-stable
+[submodule "external/glm"]
+	path = external/glm
+	url = https://github.com/g-truc/glm.git
+[submodule "external/rapidjson"]
+	path = external/rapidjson
+	url = https://github.com/Tencent/rapidjson.git
